--- a/docroot/css/itemtypenav/.sass-cache/main.css
+++ b/docroot/css/itemtypenav/.sass-cache/main.css
@@ -1,3 +1,9 @@
 .item-type-nav ul {
   list-style: outside none none; }
 
+.item-type-selected {
+  font-weight: bold; }
+
+.item-type-nav ul, .item-type-nav ol {
+  margin: 0px !important; }
+
